# rust-projects

./: README.md
borrowing/src/: main.rs
borrowing_references/src/: main.rs
cargo-modules-crates-packages/: Cargo.toml
cargo-modules-crates-packages/src/: main.rs
common_collections/src/: main.rs
concurrency/src/: main.rs
control_flow/src/: main.rs
data_types/src/: main.rs
enums/src/: main.rs
error-handling/src/: main.rs
ervar/: Cargo.toml
ervar/src/: lib.rs  main.rs
fibonacci/src/: main.rs
functions/src/: main.rs
generic_types_lifetimes/: Cargo.toml
generictypes/src/: main.rs
guessing_game/src/: main.rs
if-let-control-flow/src/: main.rs
iterators/src/: main.rs
lifetimes/src/: main.rs
match-control-flow/src/: main.rs
method-syntax/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
oop/src/: lib.rs
ownership/src/: main.rs
rectangle/src/: main.rs
restaurants/src/: front_of_house.rs  lib.rs  main.rs
slices/src/: main.rs
smart_pointers/src/: main.rs
structs/src/: main.rs
temp_converter/src/: main.rs
traits/src/: main.rs
triangle/src/: main.rs
variables/src/: main.rs
