workspace = { members = ["restaurant"] }
[package] # no mention of main.rs or lib.rs as it's implied to be the same name as the package
name = "cargo-modules-crates-packages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
